Bug 360531 - Line Styles are not correctly created initially and restored from file
Summary: Line Styles are not correctly created initially and restored from file
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.18.2 (KDE Applications 15.12.2)
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 370651 372102 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-14 20:55 UTC by Xtra Coder
Modified: 2016-11-07 07:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.18.80 (KDE Applications 16.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xtra Coder 2016-03-14 20:55:25 UTC
When 'dependency' line is initially created, after creation - it is always 1px width solid line. After opening line properties and changing any Line Style property, e.g. color, and clicking 'OK' - line is redrawn correctly (note: 'Apply' does work correctly).

After saving and reopening of the file - all lines are again displayed as '1px solid'.


Reproducible: Always

Steps to Reproduce:
1. Go to 'Settings' -> 'Configure Umbrello URL Modeller' -> 'User Interface': Set Custom line color (green) and width (4px)
2. Add 2 Classes to diagram and draw 'Dependency' between them
3. Open line props, set line color to 'blue'
4. Click 'Apply'
5. Click 'OK'
6. Save and Close file
7. Reopen File

Actual Results:  
2. Line is created as '1px solid red'
4. upon 'Apply' only arrow style of line is changed, moreover - end arrow is drawn using 'dashed' style and therefore it is not symmetric - one side is longer than the other side
7. After reopening all lines are 'solid'


Expected Results:  
2. line should be created with the style in currently line settings (see 'Settings' -> 'Configure Umbrello URL Modeller' -> 'User Interface')
4. 'Apply' should have same result as 'OK', but without closing the dialog
7. 'dependency' lines should be 'dashed'
Comment 1 Ralf Habacker 2016-03-15 08:09:46 UTC
Git commit dd5379040837bcebae881d77a67fc0c5df9d102d by Ralf Habacker.
Committed on 15/03/2016 at 08:09.
Pushed by habacker into branch 'master'.

Fix bug not setting pen style on AssociationWidget creation or loading from xmi file.

Setting pen style requires an up to date m_associationType.

M  +8    -0    umbrello/umlwidgets/associationline.cpp
M  +1    -0    umbrello/umlwidgets/associationline.h
M  +1    -0    umbrello/umlwidgets/associationwidget.cpp

http://commits.kde.org/umbrello/dd5379040837bcebae881d77a67fc0c5df9d102d
Comment 2 Ralf Habacker 2016-03-15 08:09:46 UTC
Git commit 10e766cbff0802b7e6c472606cc953ca960492e6 by Ralf Habacker.
Committed on 15/03/2016 at 08:09.
Pushed by habacker into branch 'master'.

Fix bug showing asymmetric arrow for associations with type 'Dependency'.

Arrows are always displayed solid.
FIXED-IN:2.18.80 (KDE Applications 16.03.80)

M  +1    -2    umbrello/umlwidgets/associationline.cpp

http://commits.kde.org/umbrello/10e766cbff0802b7e6c472606cc953ca960492e6
Comment 3 Ralf Habacker 2016-03-15 08:12:51 UTC
Git commit d6cdf31f97615128ba628bcfeb4d945061a16615 by Ralf Habacker.
Committed on 15/03/2016 at 08:09.
Pushed by habacker into branch 'master'.

Fix color update of association widgets on pressing 'Apply' in property dialog.

M  +1    -0    umbrello/umlwidgets/associationline.cpp

http://commits.kde.org/umbrello/d6cdf31f97615128ba628bcfeb4d945061a16615
Comment 4 Ralf Habacker 2016-03-15 08:13:16 UTC
git commit 58200089461cab9c3ab29e5005e3880e53e19ee8 by Ralf Habacker.
Committed on 15/03/2016 at 08:09.
Pushed by habacker into branch 'master'.

Fix initial setup of AssociationWidget line width.

M  +2    -1    umbrello/umlwidgets/associationwidget.cpp

http://commits.kde.org/umbrello/58200089461cab9c3ab29e5005e3880e53e19ee8
Comment 5 Ralf Habacker 2016-03-19 20:17:23 UTC
Git commit 2b99a9e0a3a7dda8b965ef2c6e562d1472cb0e60 by Ralf Habacker.
Committed on 16/03/2016 at 19:18.
Pushed by habacker into branch 'frameworks'.

Fix bug not setting pen style on AssociationWidget creation or loading from xmi file.

Setting pen style requires an up to date m_associationType.

M  +8    -0    umbrello/umlwidgets/associationline.cpp
M  +1    -0    umbrello/umlwidgets/associationline.h
M  +1    -0    umbrello/umlwidgets/associationwidget.cpp

http://commits.kde.org/umbrello/2b99a9e0a3a7dda8b965ef2c6e562d1472cb0e60
Comment 6 Ralf Habacker 2016-03-19 20:45:29 UTC
Git commit 5705ab3e6dd1e52645e66de54cb2aa2cc6f89183 by Ralf Habacker.
Committed on 16/03/2016 at 19:18.
Pushed by habacker into branch 'frameworks'.

Fix initial setup of AssociationWidget line width.

M  +2    -1    umbrello/umlwidgets/associationwidget.cpp

http://commits.kde.org/umbrello/5705ab3e6dd1e52645e66de54cb2aa2cc6f89183
Comment 7 Ralf Habacker 2016-03-19 20:45:35 UTC
Git commit dd6f93f468825c22827d71319a55d9c894793849 by Ralf Habacker.
Committed on 16/03/2016 at 19:18.
Pushed by habacker into branch 'frameworks'.

Fix bug showing asymmetric arrow for associations with type 'Dependency'.

Arrows are always displayed solid.
FIXED-IN:2.18.80 (KDE Applications 16.03.80)

M  +1    -2    umbrello/umlwidgets/associationline.cpp

http://commits.kde.org/umbrello/dd6f93f468825c22827d71319a55d9c894793849
Comment 8 Ralf Habacker 2016-10-17 08:03:40 UTC
*** Bug 370651 has been marked as a duplicate of this bug. ***
Comment 9 Ralf Habacker 2016-11-07 07:23:41 UTC
*** Bug 372102 has been marked as a duplicate of this bug. ***