Fix bug showing asymmetric arrow for associations with type 'Dependency'.

Arrows are always displayed solid.

BUG:360531
FIXED-IN:2.18.80 (KDE Applications 16.03.80)