umbrello/umlwidgets/associationline.cpp
@@ -1409,8 +1409,7 @@ void Symbol::setPen(const QPen& pen)
 {
     prepareGeometryChange();
     m_pen = pen;
-    if (m_symbolType == ClosedArrow)
-        m_pen.setStyle(Qt::SolidLine);
+    m_pen.setStyle(Qt::SolidLine);
 }
 
 /**
